--- a/Components/BottomTabs.razor
+++ b/Components/BottomTabs.razor
@@ -1,15 +1,15 @@
 ﻿<nav class="bottom-tabs" aria-label="Primary tabs">
-    <NavLink href="/" Match="NavLinkMatch.All" class="tab-item">
+    <NavLink href="" Match="NavLinkMatch.All" class="tab-item">
         <span class="tab-icon">⌂</span>
         <span class="tab-text">Dashboard</span>
     </NavLink>
 
-    <NavLink href="/accounts" class="tab-item">
+    <NavLink href="accounts" class="tab-item">
         <span class="tab-icon">◎</span>
         <span class="tab-text">Accounts</span>
     </NavLink>
 
-    <NavLink href="/reports" class="tab-item">
+    <NavLink href="reports" class="tab-item">
         <span class="tab-icon">▦</span>
         <span class="tab-text">Reports</span>
     </NavLink>
