--- a/Pages/Reports.razor
+++ b/Pages/Reports.razor
@@ -95,6 +95,6 @@
         status = "Theme updated.";
     }
 
-    private void OpenSettings() => NavigationManager.NavigateTo("/settings");
+    private void OpenSettings() => NavigationManager.NavigateTo("settings");
 }
 
